fix .pop-ticket white space

--- a/src/conferences/rs/sass/components/_pop-ticket.sass
+++ b/src/conferences/rs/sass/components/_pop-ticket.sass
@@ -6,7 +6,7 @@
 	border: 15px solid $themeColor
 	background: #131513
 	width: 1030px
-	max-width: 95%
+	// max-width: 95%
 	padding: 80px 0
 	z-index: 100
 	display: none
@@ -25,7 +25,7 @@
 		padding: 50px 0
 
 	+sm
-		width: 540px
+		// width: 540px
 		padding: 0 40px
 
 	+xs
